--- a/src/components/homepage/MainHomepage.css
+++ b/src/components/homepage/MainHomepage.css
@@ -21,6 +21,34 @@
     background-color:rgba(0,0,0,0.3);
 }
 .container1{
-    padding:20px;
-    border-radius:30px;
+    padding:30px;
+}
+*{
+    font-family: 'Lato', sans-serif;
+}
+.scroll{
+    bottom:40px;
+    margin: 0;
+    position: absolute;
+     left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
+   
+}
+.down-arrow{
+    animation: blink 3s infinite;
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
