--- a/src/components/homepage/MainHomepage.css
+++ b/src/components/homepage/MainHomepage.css
@@ -158,7 +158,7 @@
     }
   }
   
-  @media screen and (max-height: 728px){
+  @media screen and (max-height: 768px){
     .scroll{
         display: none;
     }
@@ -216,4 +216,8 @@
        padding-top: 0px;
        margin-top: 0px;
    } 
+}
+
+.container1{
+    margin-top:120px
 }
